datatypes_operators_and_variables
#For this exercise, you will be working mostly in the python (or ipython) REPL. 
#You are not required to create a file for this exercise, but are encouraged to in order to play around with the concepts you are learning.
#Identify the data type of the following values:
/* 99.9
"False"
False
'0'
0
True
'True'
[{}]
{'a': []} */

#Run ipython in terminal and do the following inputs:
In [2]: type(99.9)
Out[2]: float

In [3]: type("false")
Out[3]: str

In [4]: type(False)
Out[4]: bool

In [5]: type('0')
Out[5]: str

In [6]: type(0)
Out[6]: int

In [7]: type(True)
Out[7]: bool

In [8]: type('True')
Out[8]: str

In [9]: type([{}])
Out[9]: list

In [10]: type({'a': []})
Out[10]: dict


What data type would best represent:

#A term or phrase typed into a search box? String
#If a user is logged in? Bool
#A discount amount to apply to a user's shopping cart? Float
#Whether or not a coupon code is valid? Bool
#An email address typed into a registration form? Str
#The price of a product? Float
#A Matrix? List
#The email addresses collected from a registration form? List
#Information about applicants to Codeup's data science program? Dict


#For each of the following code blocks, read the expression and predict what the result of evaluating it would be, then execute the expression in your Python REPL.

# '1' + 2 -- error b/c you cannot add str and int:
In [1]: '1' + 2
----------------------------------------------------------------
TypeError                      Traceback (most recent call last)
<ipython-input-1-20b2518fe802> in <module>
----> 1 '1' + 2

TypeError: can only concatenate str (not "int") to str

# 6 % 4 -- gives you the remainder
In [2]: 6 % 4
Out[2]: 2

# type(6 % 4) -- gives you int b/c the output of the previous prob was the remainder 2
In [3]: type(6 % 4)
Out[3]: int

# type(type(6 % 4)) -- (in 4 & 5 are accidents). this returns type b/c it's a type within a type
In [4]: # type(type(6 % 4))

In [5]:  type(type(6 % 4))
Out[5]: type

In [6]: type(type(6 % 4))
Out[6]: type

# '3 + 4 is ' + 3 + 4 -- error b/c you cannot add str and int 
In [7]: '3 + 4 is ' + 3 + 4
----------------------------------------------------------------
TypeError                      Traceback (most recent call last)
<ipython-input-7-d779031f2239> in <module>
----> 1 '3 + 4 is ' + 3 + 4

TypeError: can only concatenate str (not "int") to str

# 0 < 0 -- bool F b/c only a negative is less than 0
In [8]: 0 < 0
Out[8]: False

# 'False' == False -- bool F b/c str with the word false is false
In [9]: 'False' == False
Out[9]: False

# True == 'True' -- bool F b/c the bool T does not equal a string
In [10]: True == 'True'
Out[10]: False

# 5 >= -5 
In [11]: 5 >= -5
Out[11]: True

# !False or False
In [12]: !False or False

# True or "42"
In [13]: True or "42"
Out[13]: True

# !True && !False
In [14]: !True && !False
/bin/bash: !False: command not found

# 6 % 5
In [15]: 6 % 5
Out[15]: 1

# 5 < 4 and 1 == 1
In [16]: 5 < 4 and 1 == 1
Out[16]: False

# 'codeup' == 'codeup' and 'codeup' == 'Codeup'
In [17]: 'codeup' == 'codeup' and 'codeup' == 'Codeup'
Out[17]: False

# 4 >= 0 and 1 !== '1'
In [18]: 4 >= 0 and 1 !== '1'
  File "<ipython-input-18-28fe0c9082c3>", line 1
    4 >= 0 and 1 !== '1'
                   ^
SyntaxError: invalid syntax

# 6 % 3 == 0
In [19]: 6 % 3 == 0
Out[19]: True

# 5 % 2 != 0
In [20]: 5 % 2 != 0
Out[20]: True

# [1] + 2
In [21]: [1] + 2
----------------------------------------------------------------
TypeError                      Traceback (most recent call last)
<ipython-input-21-54324b7054ad> in <module>
----> 1 [1] + 2

TypeError: can only concatenate list (not "int") to list

# [1] + [2]
In [22]: [1] + [2]
Out[22]: [1, 2]

# [1] * 2
In [23]: [1] * 2
Out[23]: [1, 1]

# [1] * [2]
In [24]: [1] * [2]
----------------------------------------------------------------
TypeError                      Traceback (most recent call last)
<ipython-input-24-887f6473eaff> in <module>
----> 1 [1] * [2]

TypeError: can't multiply sequence by non-int of type 'list'

# [] + [] == []
In [25]: [] + [] == []
Out[25]: True

# {} + {}
In [26]: {} + {}
----------------------------------------------------------------
TypeError                      Traceback (most recent call last)
<ipython-input-26-03eea6c7a00d> in <module>
----> 1 {} + {}

TypeError: unsupported operand type(s) for +: 'dict' and 'dict'